--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             color: rgb(233, 229, 224);
         }
 
+        td {
+  vertical-align: top;
+}
+
 
         h1 {
             color: lightgray;
@@ -55,7 +59,7 @@
         }
 
 
-        .topnav a {
+        .topnav > a {
             float: left;
             color: #f2f2f2;
             text-align: center;
@@ -76,9 +80,14 @@
         }
 
         img {
-            margin-top: 1em;
-            max-width: 100%;
+    margin: 1em 0; /* top/bottom only */
+    max-width: 40vw;
+    max-height: 30vh;
+    height: auto;
+    width: auto;
+    display: block;
         }
+
 
         a {
             color: lightgray;
@@ -146,7 +155,43 @@
             font-size: 12px;
             /* Decreases the font size by 2 points from a typical default of 16px */
         }
-    </style>
+
+.language-selector {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  z-index: 2;
+}
+
+.language-selector a {
+  text-decoration: none;
+  display: inline-block;
+}
+.flag-wrapper {
+  display: inline-block;
+  line-height: 0;
+  border: 2px solid transparent;
+  padding: 0;
+  margin: 0;
+}
+
+.language-selector a.active .flag-wrapper {
+  border-color: white;
+}
+
+.language-selector img {
+  display: block;
+  height: auto;
+  width: auto;
+  max-height: 35px;
+  max-width: 50px;
+}
+
+
+</style>
 
 
 
@@ -158,6 +203,19 @@
 <body>
     <nav id="topnav" class="topnav">
         <h1>Byurat Cultural Foundation</h1>
+        <div class="language-selector">
+            <a href="index.html" class="active">
+              <span class="flag-wrapper">
+                <img src="images/us.png" alt="English (US)">
+              </span>
+            </a>
+            <a href="indexArm.html">
+              <span class="flag-wrapper">
+                <img src="images/am.png" alt="Armenian">
+              </span>
+            </a>
+          </div>
+          
         <a href="#Smbat">Smbat</a>
         <a href="#Vaghinak">Vaghinak</a>
         <a href="#Hayk-Levon">Haik-Levon</a>
